# grammalang

./: .gitignore  Makefile  batch.html  batch_server.py  grammar_analyzer.py  index.html  interface.html  kant.mid  main.py  ontological_choice.py  pyproject.toml  requirements.txt  server.py  tactical_map.py  test_cli.mid  test_output.mid  visualizer.html  will_analyzer.py
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
grammalang-core/: Cargo.toml
grammalang-core/src/: error.rs  lib.rs  ontology.rs  trace.rs  will_markers.rs
grammalang-core/tests/: integration_test.rs
prompts/: philosophical_analysis.json
src/: main.py  tactical_map.py  will_markers.rs
src/batch/: analyzer.py
src/grammalang/: cli.py  ontology.py  pipeline.py  server.py
src/grammalang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/grammalang/analyzers/: grammar_analyzer.py  kantian.py  rust_analyzer.py
src/grammalang/batch/: __init__.py  analyzer.py
src/grammalang/generators/: midi_generator.py
src/grammalang/rust_bridge/: grammalang_core.pyd
tests/: gramma_music_vm.py  test_integration.py
