[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grammalang"
version = "0.2.0"
description = "GrammaLang: The Grammar Machine PoC and Test Oracle"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "mido>=1.3.0",
    "stanza>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
grammalang = "grammalang.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
