[package]
name = "grammalang-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
pyo3 = { version = "0.23", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

[lib]
name = "grammalang_core"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
